# labs_cv

lab1/: README.md
lab1/src/: main.py  python+opencv.py  results.txt
lab1/src/3/: CMakeLists.txt  main.cpp
lab2/: README.md  v1.py  v2_orb.py
lab3/: LW3.ipynb  readme.md
lab4/: .gitattributes  .gitignore  CMakeLists.txt  README.md
lab4/src/: Camera.cpp  Camera.h  ImageRecognizer.cpp  ImageRecognizer.h  MainWindow.cpp  MainWindow.h  main.cpp
lab4/src/ui/: mainwindow.ui
lab4/src/utils/: RecognitionFrameCounter.h  TextBrowserLogger.cpp  TextBrowserLogger.h  Utils.cpp  Utils.h
